# haskell-design

./: .gitignore  Db.hs  Json.hs  Login.hs  Main.hs  README  Server.hs  Setup.lhs  chat.cabal  chat.htm  chat.js  haskell-design.cabal  http.js  login.htm  query.htm  server.hs  state.htm  table.js  user.css
src/: Chat.hs  Database.hs  File.hs  Google.hs  GoogleEmail.hs  GoogleProfile.hs  GroupMap.hs  Json.hs  Keys.hs  Login.hs  Main.hs  Picture.hs  State.hs  Table.hs  User.hs  UserMap.hs  Web.hs
ssl/: cert.sh
www/: chat.css  chat.htm  chat.js  code.htm  http.js  index.htm  login.htm  main.htm  main.js  state.htm  user.css  user.htm
