name: chat
version: 0.0.1
cabal-version: >=1.2
build-type: Simple
license: AllRightsReserved
license-file: ""
data-dir: ""
 
executable chat
    build-depends: acid-state -any, base -any, bytestring -any,
                   couchdb-conduit -any, fb -any, happstack-server -any,
                   http-conduit -any, monad-control -any, mtl -any, resourcet -any,
                   safecopy -any, syb -any, text -any, transformers -any,
                   websockets -any
    main-is: Main.hs
    buildable: True
    hs-source-dirs: src
    other-modules: State Login Web Chat
 