name: haskell-design
version: 0.0.0.0
synopsis: Haskell web design.

description: libgmp3-dev
             freeglut3-dev
             libssl-dev

homepage: https://github.com/gertcuykens/haskell-design.git
license: GPL-3
--license-file: LICENSE
author: Gert Cuykens
maintainer: gert.cuykens@gmail.com
category: Web
build-type: Simple
cabal-version: >=1.8
data-files: www/*.png, www/*.htm, www/*.js, www/*.css

executable haskell-design
    hs-source-dirs: src
    main-is: Main.hs
    other-modules: Google, Keys, Database
    ghc-options: -Wall
    build-depends: base >= 4.6
                 , text >= 0.11
                 , bytestring >= 0.10
                 , transformers >= 0.3
                 , directory >= 1.2
                 , websockets >= 0.7
                 , mtl >= 2.1
                 , aeson >= 0.6
                 , acid-state >= 0.8
                 , safecopy >= 0.7
                 , containers >= 0.5
                 , lens >= 3.2
                 , pointless-fun >= 1.1
                 , warp >= 1.3
                 , warp-tls >= 1.3
                 , wai >= 1.4
                 , wai-websockets >= 1.3
                 , wai-app-static >= 0.2
                 , wai-extra >= 1.3
                 , http-conduit >= 1.6
                 , http-types >= 0.7
                 , mime-types >= 0.1
                 , http-reverse-proxy >= 0.1
                 , http-streams >= 0.6
                 , io-streams >= 1.1
                 , hoauth2 >= 0.2
                 , cmdargs >= 0.6
                 , resourcet >= 0.4
                 , blaze-builder >= 0.3

